--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,20 @@
-<div class="wrapper">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= bootstrap_devise_error_messages! %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= bootstrap_devise_error_messages! %>
+  <div class="wrapper">
     <div class="form-signin shadow">
       <h2 class="form-signin-heading text-center"><%= t('.sign_up') %></h2>
-
       <div class="form-group">
           <%= f.label :username %><br />
           <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control', placeholder: "Username" %>
       </div>
-
       <div class="form-group">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', placeholder: "email@example.com" %>
       </div>
-
       <div class="form-group">
         <%= f.label :phone_number %>
-        <%= f.text_field :phone_number, autofocus: true, autocomplete: 'username', class: 'form-control' %>
+        <%= f.text_field :phone_number, autofocus: true, autocomplete: 'username', class: 'form-control', placeholder: "Your phone number" %>
       </div>
-
       <div class="form-group">
         <%= f.label :password %>
         <% if @minimum_password_length %>
@@ -26,19 +22,16 @@
         <% end %><br />
         <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: "Password" %>
       </div>
-
       <div class="form-group">
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', placeholder: "Password" %>
       </div>
-
       <div class="form-group">
         <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
       </div>
-
       <div class="dropdown-divider"></div>
       
       <%= render "devise/shared/links" %>
     </div>
-  <% end %>
-</div>
+  </div>
+<% end %>
