--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -35,9 +35,9 @@
             <p>Found <%= check_box_tag('value1', "Found") %></p>
             <p>Lost <%= check_box_tag('value2', "Lost") %></p>      
             <p>Select category: <%= select_tag "category_id", options_from_collection_for_select(Category.all, :id, :category_name), class:"form-control", prompt: "Select category" %></p>
-            <div class="row">
+            <p class="row">
               <p>Date from: <%= date_field_tag('start_date') %></p> <p>Date to: <%= date_field_tag('end_date') %></p><br>
-            </div>
+            </p>
           <button id="btn-adv" class="btn btn-outline-success">Search</button>
           <%= link_to "Clear Search", request.path, class:"cancel-button" %>
           </div>
