--- a/app/views/stuffs/show.html.erb
+++ b/app/views/stuffs/show.html.erb
@@ -26,8 +26,7 @@
       <div class="my-3">
         <strong class="d-inline">Location of captured image:</strong>
         <% if @stuff.image.metadata['longitude'].present? %>
-          <p id = "latlng"><%= @stuff.image.metadata['longitude'] %> ,
-          <%= @stuff.image.metadata['latitude'] %></p>
+          <p id = "latlng"></p>
         <% else %>
           Image don't have latitude and longitude
         <% end %>
@@ -41,7 +40,11 @@
     </div>
     <div class="col my-5">
       <div class="card">
+      <% if @stuff.latitude.present?%>
         <%= image_tag "https://maps.googleapis.com/maps/api/staticmap?zoom=16&size=400x400&markers=#{@stuff.latitude},#{@stuff.longitude}&key=#{ Rails.application.credentials.aws[:access_key_id] }", alt: "Map" %>
+      <% else %>
+        <%= image_tag "https://maps.googleapis.com/maps/api/staticmap?center=54.5260,15.2551&zoom=4&size=400x400&key=#{ Rails.application.credentials.aws[:access_key_id] }", alt: "Map" %>
+      <% end %>
       </div>
     </div>
   </div>
@@ -63,7 +66,6 @@ function myFunction() {
   var popup = document.getElementById("myPopup");
   popup.classList.toggle("show");
 }
-
 </script>
 
 <script>
