--- a/app/views/stuffs/find_stuffs.html.erb
+++ b/app/views/stuffs/find_stuffs.html.erb
@@ -1,3 +1,5 @@
+<h1 class="text-center my-5">Found stuffs</h1>
+
 <div class="d-flex flex-wrap justify-content-start">
   <% Stuff.found_stuf.each do |stuff| %>
     <div class="card mx-auto mb-3" style="width: 540px;">
