update style for stuff card

--- a/app/views/stuffs/_stuffs.html.erb
+++ b/app/views/stuffs/_stuffs.html.erb
@@ -9,11 +9,11 @@
           <div class="card-body">
             <h5 class="card-title"><%= stuff.title %></h5>
             <p class="card-text"><%= stuff.description.first(40) %></p>
-            <p><%= link_to 'Show', stuff, class:"fa fa-eye btn btn-info" %></p>
+            <%= link_to 'Show', stuff, class:"fa fa-eye btn btn-info my-3" %>
             <% if stuff.find %>
-              <p><%= link_to 'found', find_stuffs_path, class:"btn btn-light" %></p>
+              <%= link_to 'found', find_stuffs_path, class:"btn btn-success" %>
             <% else %>
-              <p><%= link_to 'lost', lost_stuffs_path, class:"btn btn-light" %></p>
+              <%= link_to 'lost', lost_stuffs_path, class:"btn btn-warning" %>
             <% end %>
             <p class="card-footer text-center"><small class="text-muted">Posted: <%= time_ago_in_words(stuff.created_at) %> ago</small></p>
           </div>
