--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.aws[:access_key_id] %>&libraries=places&callback=initMap" async defer data-turbolinks-eval="false"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
     
   <body class="d-flex flex-column">
