--- a/app/views/stuffs/edit.html.erb
+++ b/app/views/stuffs/edit.html.erb
@@ -48,7 +48,7 @@
       </div>
 
       <div class="field my-4">
-        <%= form.label :found_date %>
+        <%= form.label :found_date, 'Found/Lost date' %><br>
         <%= form.date_select :found_date %>
       </div>  
     </div>
@@ -72,7 +72,7 @@
       </div>
 
       <div class="field my-3">
-        <%= form.label :image_location %>
+        <%= form.label :image_location, 'Image location(data privacy)' %>
         <%= form.check_box :image_location, class: "check-box" %>
       </div>
 
