--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -1,49 +1,44 @@
-
-
-  <div class="container col-sm-10">
-    <div class="row">
-      <div class="col-sm-2 my-5">
-        <h1 class="my-4">Stuffs</h1>
-        <div class="list-group list-border">
-          <a><%= link_to 'New Stuff', new_stuff_path, class:'fa fa-plus new-btn btn' %></a>
-          <a><%= link_to 'My account', edit_user_registration_path(@user), class:'fa fa-address-card my-acc btn btn-warning my-2' %></a>
-          <!--<a><%= link_to 'Find items', find_stuffs_path, class:'btn btn-primary my-1' %></a>
-          <a><%= link_to 'Lost items', lost_stuffs_path, class:'btn btn-primary my-1' %></a>-->
-        </div>
-      </div>
-      <div class="col-sm-5 my-5">
-        <div class="icon-position">
-          <p class="fa fa-search-plus my-3" style="font-size: 75px"></p>
-          <p class="counter" data-target="<%= Stuff.found_stuf.count %>"></p>
-          <p style="font-size: 40px"><strong>found stuffs</strong></p>
-        </div>
-      </div>
-      <div class="col-sm-5 my-5">
-        <div class="icon-position">
-          <p class="fa fa-search my-3" style="font-size: 75px"></p>
-          <p class="counter" data-target="<%= Stuff.lost_stuf.count %>"></p>
-          <p style="font-size: 40px"><strong>lost stuffs</strong></p>
-        </div>
+<div class="container col-sm-10">
+  <div class="row">
+    <div class="col-sm-2 my-5">
+      <h1 class="my-4">Stuffs</h1>
+      <div class="list-group list-border">
+        <%= link_to 'New Stuff', new_stuff_path, class:'fa fa-plus new-btn btn' %>
+        <%= link_to 'My account', edit_user_registration_path(@user), class:'fa fa-address-card my-acc btn btn-warning my-2' %>
       </div>
     </div>
-    <div class="dropdown-divider my-5"></div>
-    <%= render 'shared/search' %>    
-  </div>
-  <div class="container"><!--radi na svim rezolucijama, bez toga ne radi-->
-    <div class="row">
-      <div class="col">
-        <%= render 'stuffs' %>
+    <div class="col-sm-5 my-5">
+      <div class="icon-position">
+        <p class="fa fa-search-plus my-3" style="font-size: 75px"></p>
+        <p class="counter" data-target="<%= Stuff.found_stuf.count %>"></p>
+        <p style="font-size: 40px"><strong>found stuffs</strong></p>
+      </div>
+    </div>
+    <div class="col-sm-5 my-5">
+      <div class="icon-position">
+        <p class="fa fa-search my-3" style="font-size: 75px"></p>
+        <p class="counter" data-target="<%= Stuff.lost_stuf.count %>"></p>
+        <p style="font-size: 40px"><strong>lost stuffs</strong></p>
       </div>
     </div>
   </div>
-  <% if @stuffs.count > 14 %>
-    <div class="container rounded apple_pagination mb-4 my-5" id="pagination-container">
-      <%= will_paginate @stuffs, :container => false %>
+  <div class="dropdown-divider my-5"></div>
+  <%= render 'shared/search' %>    
+</div>
+<div class="container"><!--radi na svim rezolucijama, bez toga ne radi-->
+  <div class="row">
+    <div class="col">
+      <%= render 'stuffs' %>
     </div>
-  <% end %>
+  </div>
+</div>
+<% if @stuffs.count > 14 %>
+  <div class="container rounded apple_pagination mb-4 my-5" id="pagination-container">
+    <%= will_paginate @stuffs, :container => false %>
+  </div>
+<% end %>
 
 <%= render 'shared/footer' %>
-
 
 <script>
 var counters = document.querySelectorAll('.counter');
@@ -72,6 +67,5 @@ counters.forEach(counter => {
 	};
 
 	updateCount();
-});
-								
+});								
 </script>
