--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,10 +1,10 @@
-<h1 class="text-center">Category</h1>
+<h1 class="text-center my-3">Categories</h1>
   <% @categories.each do |category| %>
     <div class="container card text-center shadow mb-5 rounded" id="category-index">
       <div class="card-body">
         <h5 class="card-title"><%= link_to category.category_name, category_path(category) %></h5>
       </div>
-      <div class="card-footer text-muted">
+      <div >
         <%= pluralize(category.stuffs.count, "stuffs") %>
       </div>
     </div>
