--- a/app/views/stuffs/new.html.erb
+++ b/app/views/stuffs/new.html.erb
@@ -44,8 +44,8 @@
         </div>
 
         <div class="field my-4">
-          <%= form.label :found_date %>
-          <%= form.date_select :found_date, class:"form-control" %>
+          <%= form.label "Found/lost date" %>
+          <p><%= form.date_select :found_date, class:"form-control" %></p>
         </div>
       </div>
       <div class="col">
@@ -67,7 +67,7 @@
       </div>
       
       <div class="field my-3">
-        <%= form.label :image_location %>
+        <%= form.label :image_location, 'Image location(data privacy)' %>
         <%= form.check_box :image_location %>
       </div>
         
