--- a/app/views/stuffs/show.html.erb
+++ b/app/views/stuffs/show.html.erb
@@ -24,12 +24,12 @@
       </div>
 
       <% if @stuff.image_location %>
-        <div class="my-3" id="text" onload="">
+        <div class="my-3" id="text">
           <strong class="d-inline">Location of captured image:</strong>
           <% if @stuff.image.metadata['longitude'].present? %>
             <p id = "latlng"></p>
           <% else %>
-            Image don't have latitude and longitude
+            <p>Image don't have latitude and longitude</p>
           <% end %>
         </div>
       <% else %>
